styles/style.css
:root {
    --color-dark: #030712;
    --color-light: #fbe9d0;
    --color-slate-400: #94a3b8;
    --color-slate-600: #475569;
    --color-slate-800: #1e293b;
    --color-primary: #244855; /* rgb(163, 230, 53) */ 
    --color-secondary: #cda235 /* 	rgb(251, 191, 36) */;
    --color-primary-light: #f8eee0;
    --color-primary-shadow: rgb(163, 230, 53, 0.4);
    --color-primary-shadow-light: rgb(163, 230, 53, 0.1);

    --size-xxs: 0.5rem;
    --size-xs: 0.75rem;
    --size-sm: 0.875rem;
    --size-base: 1rem;
    --size-lg: 1.125rem;
    --size-xl: 1.25rem;
    --size-2xl: 1.5rem;
    --size-3xl: 1.875rem;
    --size-4xl: 2.25rem;
    --size-5xl: 3rem;
    --size-6xl: 3.75rem;
    --size-7xl: 4.5rem;
    --size-8xl: 6rem;
    --size-9xl: 8rem;
    --size-10xl: 10rem;
}

* {
    margin: 0px;
    line-height: calc(1em + 0.5rem);
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'General Sans',sans-serif;
    background-color: var(--color-dark);
    color: var(--color-primary)
}

img,
picture,
video,
canvas,
svg {
    display: block; /* Inline by default, rarely used */
    max-width: 100%;
    user-select: none;
}

button {
    display: inline-block;
    padding: 0;
    border: none;
    background: none;
    cursor: pointer;
    color: inherit;
}

a {
    color: var(--color-primary);
}

strong {
    color: var(--color-secondary);
}

/* variables inside the body has more specificity than those inside the root */
.light-mode {
    --color-light: #030712;
    --color-dark: #f1f5f9;
    --color-slate-400: #1e293b;
    --color-slate-600: #1e293b;
    --color-slate-800: #1e293b;
    --color-primary-shadow: rgb(163, 230, 53, 0.4);
    --color-primary-shadow-light: rgb(163, 230, 53, 0.1);
}

/* Scrollbar */

body::-webkit-scrollbar {
    width: 8px;
  }
   
  body::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
  }
   
  body::-webkit-scrollbar-thumb {
    background-color: var(--color-primary);
    outline: 1px solid var(--color-primary);
    border-radius: 25%;
  }

